--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-
+    compile 'com.google.android.gms:play-services:9.0.2'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'de.uzl.itm:ncoap-core:1.8.3-SNAPSHOT'
     compile 'org.slf4j:slf4j-android:1.7.21'
