--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,27 +25,26 @@
             </intent-filter>
         </activity>
 
+        <receiver
+            android:name="alaindc.crowdroid.SensAndSendBcastRcv"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+                <data android:scheme="package" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+
         <service
             android:name=".PositionAndSenseIntentService"
             android:exported="false"/>
     </application>
-
-
-    <receiver
-        android:name="alaindc.crowdroid.SensAndSendBcastRcv"
-        android:enabled="true"
-        android:exported="false">
-        <intent-filter>
-            <action android:name="android.intent.action.BOOT_COMPLETED" />
-        </intent-filter>
-        <intent-filter>
-            <action android:name="android.intent.action.PACKAGE_REPLACED" />
-            <data android:scheme="package" />
-        </intent-filter>
-        <intent-filter>
-            <action android:name="android.intent.action.PACKAGE_ADDED" />
-            <data android:scheme="package" />
-        </intent-filter>
-    </receiver>
 
 </manifest>
