--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,9 +63,15 @@
             android:name=".SensorsIntentService"
             android:exported="false" />
         <service
-            android:name=".PhoneListenService"
+            android:name=".NeverSleepService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+        <service
+            android:name=".GeofenceIntentService"
+            android:exported="false" />
+        <service
+            android:name=".GeofenceTransitionsIntentService"
+            android:exported="false" />
     </application>
 
 </manifest>
