--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,17 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "2048M"
     }
 }
 
@@ -35,4 +40,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'de.uzl.itm:ncoap-core:1.8.3-SNAPSHOT'
     compile 'org.slf4j:slf4j-android:1.7.21'
+    compile 'com.android.support:multidex:1.0.0'
 }
